--- a/app/views/departments/_fields.html.erb
+++ b/app/views/departments/_fields.html.erb
@@ -1,9 +1,17 @@
 <%= render 'shared/error_messages', :object => f.object %>
-<div class="field">
-  <%= f.label :display_name %><br />
-  <%= f.text_field :display_name %>
+<div class="form_row">
+  <div class="form_label">
+    <%= f.label :display_name %>
+  </div>
+  <div class="form_field">
+    <%= f.text_field :display_name %>
+  </div>
 </div>
-<div class="field">
-  <%= f.label :short_name %><br />
-  <%= f.text_field :short_name %>
+<div class="form_row">
+  <div class="form_label">
+    <%= f.label :short_name %>
+  </div>
+  <div class="form_field">
+    <%= f.text_field :short_name %>
+  </div>
 </div>
