--- a/app/assets/stylesheets/departments.css.scss
+++ b/app/assets/stylesheets/departments.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .departments {
 	.department_summary {
-		width: 500px;
+		width: 600px;
 		margin: 0 40px 60px 0;
 		float: left;
 		position: relative;
@@ -13,7 +13,7 @@
 			padding-bottom: 2px;
 			margin-bottom: 10px;
 			float: right;
-			width: 430px;
+			width: 250px;
 			text-align: left;
 			font-weight: lighter;
 			display: block;
@@ -22,25 +22,10 @@
 				text-decoration: none;
 			}
 		}
-		.status_bar {
+		.status_chart {
 			height: 180px;
-			width: 50px;
+			width: 320px;
 			float: left;
-			div {
-				width: 100%;
-				height: 60px;
-				margin: 0;
-				padding: 0;
-			}
-			div.offline {
-				background-color: red;
-			}
-			div.unavailable {
-				background-color: yellow;
-			}
-			div.available {
-				background-color: green;
-			}
 		}
 		.info_row {
 			display: block;
