--- a/app/assets/stylesheets/departments.css.scss
+++ b/app/assets/stylesheets/departments.css.scss
@@ -23,9 +23,9 @@
 			}
 		}
 		.status_chart {
-			height: 180px;
-			width: 320px;
-			float: left;
+			height: 350px;
+			width: 350px;
+			/*float: left;*/
 		}
 		.info_row {
 			display: block;
