--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -1,5 +1,6 @@
 <% @department.sites.each do |site| %>
-  <div class="site_summary" data-macs="20-17-2-1" data-pcs="40-30-5-5" data-thinclients="30-5-10-15">
+  <div class="site_summary" <%= SiteDecorator.find(site).status_data %>>
+    <%= link_to site.display_name, department_site_path(site), :class => "site_title" %>
     <div id="<%= site.short_name %>_chart" class="status_chart">
     </div>
   </div>
