--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -1,2 +1,181 @@
-<h1>Sites#show</h1>
-<p>Find me in app/views/sites/show.html.erb</p>
+<header class="site_header" data-site="1">
+  <a href="#aas">Arts and Science 10</a>
+  <div class="summary">
+    <div class="available_summary">
+      <%= image_tag "green.png", :class => "light" %>
+      <span class="available_count">8</span>
+    </div>
+    <div class="unavailable_summary">
+      <%= image_tag "yellow.png", :class => "light" %>
+      <span class="unavailable_count">16</span>
+    </div>
+    <div class="offline_summary">
+      <%= image_tag "red.png", :class => "light" %>
+      <span class="offline_count">1</span>
+    </div>
+  </div>
+  <div class="throbbler_container">
+    <%= image_tag "ajax-loader.gif", :alt => "Loading...", :class => "throbbler" %>
+  </div>
+  <div class="toggle_button">Details</div>
+  <div class="refresh_button">
+    <%= image_tag "refresh.png", :alt => "Refresh", :title => "Refresh", :width => "15" %>
+  </div>
+  <div class="hide_button" title="Hide">X</div>
+</header>
+<section class="site_pane" data-site="1">
+  <div class="type_header">
+    <%= image_tag "windows.png", :title => "Windows Computers", :height => "25", :class => "windows_icon" %>
+  </div>
+  <div class="type_pane" data-type="windows">
+    <div class="device_column">
+      <div class="device available">
+        <%= image_tag "green.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "green.png", :class => "light-right" %>
+      </div>
+      <div class="device unavailable">
+        <%= image_tag "yellow.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "yellow.png", :class => "light-right" %>
+      </div>
+    </div>
+		<div class="device_column">
+      <div class="device available">
+        <%= image_tag "green.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "green.png", :class => "light-right" %>
+      </div>
+      <div class="device available">
+        <%= image_tag "green.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "green.png", :class => "light-right" %>
+      </div>
+    </div>
+		<div class="device_column">
+      <div class="device available">
+        <%= image_tag "green.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "green.png", :class => "light-right" %>
+      </div>
+      <div class="device available">
+        <%= image_tag "green.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "green.png", :class => "light-right" %>
+      </div>
+    </div>
+    <div class="device_column">
+      <div class="device available">
+        <%= image_tag "green.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "green.png", :class => "light-right" %>
+      </div>
+      <div class="device available">
+        <%= image_tag "green.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "green.png", :class => "light-right" %>
+      </div>
+    </div>
+    <div class="device_column">
+      <div class="device available">
+        <%= image_tag "green.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "green.png", :class => "light-right" %>
+      </div>
+      <div class="device available">
+        <%= image_tag "green.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "green.png", :class => "light-right" %>
+      </div>
+    </div>
+    <div class="device_column">
+      <div class="device available">
+        <%= image_tag "green.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "green.png", :class => "light-right" %>
+      </div>
+      <div class="device available">
+        <%= image_tag "green.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "green.png", :class => "light-right" %>
+      </div>
+    </div>
+  </div>
+  <div class="type_header">
+    <%= image_tag "mac.png", :title => "Macs", :height => "25", :class => "mac_icon" %>
+  </div>
+  <div class="type_pane" data-type="macs">
+    <div class="device_column">
+      <div class="device available">
+        <%= image_tag "green.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "green.png", :class => "light-right" %>
+      </div>
+      <div class="device unavailable">
+        <%= image_tag "yellow.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "yellow.png", :class => "light-right" %>
+      </div>
+    </div>
+    <div class="device_column">
+      <div class="device offline">
+        <%= image_tag "red.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "red.png", :class => "light-right" %>
+      </div>
+      <div class="device available">
+        <%= image_tag "green.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "green.png", :class => "light-right" %>
+      </div>
+    </div>
+    <div class="device_column">
+      <div class="device available">
+        <%= image_tag "green.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "green.png", :class => "light-right" %>
+      </div>
+      <div class="device available">
+        <%= image_tag "green.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "green.png", :class => "light-right" %>
+      </div>
+    </div>
+    <div class="device_column">
+      <div class="device available">
+        <%= image_tag "green.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "green.png", :class => "light-right" %>
+      </div>
+      <div class="device available">
+        <%= image_tag "green.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "green.png", :class => "light-right" %>
+      </div>
+    </div>
+    <div class="device_column">
+      <div class="device available">
+        <%= image_tag "green.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "green.png", :class => "light-right" %>
+      </div>
+      <div class="device available">
+        <%= image_tag "green.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "green.png", :class => "light-right" %>
+      </div>
+    </div>
+    <div class="device_column">
+      <div class="device available">
+        <%= image_tag "green.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "green.png", :class => "light-right" %>
+      </div>
+      <div class="device available">
+        <%= image_tag "green.png", :class => "light" %>
+        <span>AAS-PC-01</span>
+        <%= image_tag "green.png", :class => "light-right" %>
+      </div>
+    </div>
+  </div>
+</section>
