--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -12,7 +12,7 @@
         </div><!--
         --><div class="label">Sites</div><!--
         --><div class="mac_icon">
-          <%= image_tag "mac.png", :title => "Mac Clients", :size => "40x40", :class => "type_icon" %>
+          <%= image_tag "mac_light.png", :title => "Mac Clients", :size => "40x40", :class => "type_icon" %>
         </div><!--
       --></div>
       <div class="data_row">
