--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -19,7 +19,7 @@ $darkest_gold: #A67D12;
 }
 
 body {
-	background: image_url("bg_nav.jpg") repeat-y fixed left top $page_bg2;
+	background: image_url("bg_nav.jpg") repeat-y fixed left top #1D2D44;
   	color: $lightest_gold;
 	font-family: "Lucida Sans Unicode","Lucida Grande","Trebuchet MS",Arial,Helvetica,sans-serif;
 	font-size: 11px;
@@ -81,7 +81,7 @@ body {
 			}
 		}
 		li.parent, li.active, li#current {
-			background: image_url("arrow_menu_big.jpg") no-repeat scroll right top transparent;
+			background: image_url("arrow_menu_big.png") no-repeat scroll right top transparent;
 			border: medium none;
 			color: #FFFFFF !important;
 			margin-bottom: -1px;
@@ -137,7 +137,7 @@ body {
 			clear: both;
 			
 			.parent.active, #current.active {
-				background: image_url("arrow_menu_small.jpg") no-repeat scroll right top transparent;
+				background: image_url("arrow_menu_small.png") no-repeat scroll right top transparent;
 				border: medium none;
 				color: #FFFFFF !important;
 				margin-bottom: -1px;
@@ -171,14 +171,17 @@ body {
 }
 
 #content {
-	margin-left: 320px;
-	margin-right: 60px;
+	background: image_url("bg.jpg") repeat-x scroll center top;
+	min-height: 800px;
+	margin-left: 235px;
+	padding-left: 85px;
+	padding-right: 60px;
 	overflow: hidden;
 	padding-top: 50px;
 }
 
 #page_title {
-	border-left: 1px solid $main_blue;
+	border-left: 1px solid #A6D3FD;
 	color: $main_gold;
 	font-size: 20px;
 	letter-spacing: 0.3px;
@@ -188,7 +191,7 @@ body {
 	font-variant: small-caps;
 }
 a {
-	color: $main_blue;
+	color: #A6D3FD;
 	text-decoration: none;
 }
 a:hover {
@@ -201,7 +204,7 @@ ul {
 
 th {
 	border-bottom: 1px dotted $main_blue;
-	color: $main_blue;
+	color: #A6D3FD;
 	font-size: 14px;
 	font-variant: small-caps;
 	text-align: center;
@@ -209,7 +212,7 @@ th {
 
 input[type="text"], input[type="password"] {
 	background-color: transparent;
-	border: 1px solid $main_blue;
+	border: 1px solid #A6D3FD;
 	color: #FFFFFF;
 	padding: 3px;
 }
@@ -267,7 +270,7 @@ tbody tr {
 	right: 0px;
 	
 	.flash {
-		margin: 20px;
+		margin: 40px 20px 20px;
 		padding: 10px;
 		min-width: 200px;
 		max-width: 500px;
