View-building and authorizationf

--- a/app/assets/stylesheets/departments.css.scss
+++ b/app/assets/stylesheets/departments.css.scss
@@ -12,7 +12,7 @@
 		.status_chart {
 			height: 350px;
 			width: 350px;
-			position: fixed;
+			position: absolute;
 		}
 		.department_data {
 			width: 80%;
@@ -75,7 +75,7 @@
 		.status_chart {
 			height: 350px;
 			width: 350px;
-			position: fixed;
+			position: absolute;
 		}
 	}
 }
