--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -19,7 +19,7 @@ $darkest_gold: #A67D12;
 }
 
 body {
-	background: image_url("bg_nav.jpg") repeat-y fixed left top #1D2D44;
+	background: image_url("bg_nav.jpg") repeat-y scroll left top #1D2D44;
   	color: $lightest_gold;
 	font-family: "Lucida Sans Unicode","Lucida Grande","Trebuchet MS",Arial,Helvetica,sans-serif;
 	font-size: 11px;
@@ -109,10 +109,13 @@ body {
 				a {
 					color: #797266 !important;
 				}
-				a:hover{
+				a:hover, a.selected {
 					background-color: $main_blue;
 					color: #FFFFFF !important;
 					padding: 2px 5px;
+				}
+				a.selected:hover {
+					color: $darkest_blue !important;
 				}
 			}
 		}
@@ -136,21 +139,21 @@ body {
 			text-align: center;
 			clear: both;
 			
-			.parent.active, #current.active {
-				background: image_url("arrow_menu_small.png") no-repeat scroll right top transparent;
-				border: medium none;
-				color: #FFFFFF !important;
-				margin-bottom: -1px;
-				padding-right: 16px;
-				
-				a {
-					color: #FFFFFF;
-				}
-			}
 			a {
 				color: #545959;
 			}
 			a:hover {
+				color: #FFFFFF;
+			}
+		}
+		li.parent, li.active, #current.active {
+			background: image_url("arrow_menu_small.png") no-repeat scroll right top transparent;
+			border: medium none;
+			color: #FFFFFF !important;
+			margin-bottom: -1px;
+			padding-right: 16px;
+			
+			a {
 				color: #FFFFFF;
 			}
 		}
@@ -173,10 +176,10 @@ body {
 #content {
 	background: image_url("bg.jpg") repeat-x scroll center top;
 	min-height: 800px;
+	min-width: 1000px;
 	margin-left: 235px;
-	padding-left: 85px;
+	padding-left: 45px;
 	padding-right: 60px;
-	overflow: hidden;
 	padding-top: 50px;
 }
 
@@ -193,6 +196,7 @@ body {
 a {
 	color: #A6D3FD;
 	text-decoration: none;
+	cursor: pointer;
 }
 a:hover {
 	text-decoration: underline;
@@ -264,6 +268,15 @@ tbody tr {
 	}
 }
 
+#current_user_status {
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	padding-right: 10px;
+	padding-top: 2px;
+	font-size: 12px;
+	color: #A6D3FD;
+}
 #flashes {
 	position: absolute;
 	top: 0px;
