--- a/app/assets/stylesheets/sites.css.scss
+++ b/app/assets/stylesheets/sites.css.scss
@@ -24,7 +24,7 @@ $darkest_gold: #A67D12;
 		font-variant: small-caps;
 		padding: 2px 2px 0px 6px;
 		position: relative;
-		width: 1150px;
+		width: 920px;
 		text-decoration: none;
 	}
 	.summary {
@@ -101,12 +101,18 @@ $darkest_gold: #A67D12;
 		color: #001621;
 	}
 	.site_pane {
-		width: 1150px;
+		width: 920px;
 		display: block;
 		border: 2px solid $light_blue;
 		margin-bottom: 20px;
 		font-size: 0px;
 		
+		.no_computers {
+			font-size: 20px;
+			padding: 10px;
+			margin: 0px auto;
+			text-align: center;
+		}
 		.type_header {
 			width: 100%;
 			height: 25px;
