--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,13 +5,13 @@
     <%= department_links %>
   </ul>
   <ul id="submenu">
-    <li><%= link_to "Users", users_path %></li>
-    <li><a href="#stats">Statistics</a></li>
-    <li><a href="#logs">Logs</a></li>
+    <li <%= "class=active" if submenu_link_active? "users" %>><%= link_to "Users", users_path %></li>
+    <li <%= "class=active" if submenu_link_active? "stats" %>><%= link_to "Statistics", stats_path %></li>
+    <li <%= "class=active" if submenu_link_active? "logs" %>><%= link_to "Logs", logs_path %></li>
     <% if signed_in? %>
       <li><%= link_to "Log Out", logout_path, :method => :delete %></li>
     <% else %>
-      <li><%= link_to "Log In", login_path %></li>
+      <li <%= "class=active" if submenu_link_active? "sessions" %>><%= link_to "Log In", login_path %></li>
     <% end %>
   </ul>
   <div id="copy">&copy; 2012 University of Missouri<br />Division of Information Technology</div>
