--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <%= render 'layouts/navigation' %>
   <section id="content">
     <section id="container" class="<%= controller.controller_name %>">
+      <%= render 'current_user_status' %>
       <div id="flashes">
         <% flash.each do |key, value| %>
           <%= content_tag(:div, value, :class => "flash ui-state-#{key}") %>
@@ -21,6 +22,7 @@
       </header>
       <%= yield %>
     </section>
+     <%= debug(params) if Rails.env.development? %>
   </section>
 </body>
 </html>
